--- a/public/kuis.html
+++ b/public/kuis.html
@@ -261,7 +261,7 @@
             <p id="score-details" class="score-details"></p>
             <div class="result-buttons">
                 <button id="retryBtn" class="nav-btn">Ulangi Kuis</button>
-                <a href="index.html" class="nav-btn" style="text-decoration: none; display: inline-block;">Kembali ke Simulasi</a>
+                <a href="index.html" class="nav-btn nav-btn-link">Kembali ke Simulasi</a>
             </div>
         </div>
 
