--- a/public/kuis.html
+++ b/public/kuis.html
@@ -260,7 +260,7 @@
             <p id="score" class="score-text">0</p>
             <p id="score-details" class="score-details"></p>
             <div class="result-buttons">
-                <button id="retryBtn" class="nav-btn">Ulangi Kuis</button>
+                <button id="retryBtn" class="nav-btn nav-btn-link">Ulangi Kuis</button>
                 <a href="index.html" class="nav-btn nav-btn-link">Kembali ke Simulasi</a>
             </div>
         </div>
