Add settings page with change password for web, fix isGoogleUser check for Android

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
                 <div class="nav-buttons">
                     <a href="materi.html" class="nav-link-btn">📚 Materi</a>
                     <a href="kuis.html" class="nav-link-btn">🎯 Kuis</a>
+                    <a href="settings.html" class="nav-link-btn">⚙️ Pengaturan</a>
                     <button id="logoutButton">Logout</button>
                 </div>
             </div>
